[package]
name = "bevy_ldtk_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", features = ["bevy_sprite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
bevy_rapier2d = "0.19"
rand = "0.8"
bevy_ecs_ldtk = "0.5.0"

