[package]
name = "lines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_rapier2d = { version = "0.19.0", features = [ "debug-render" ] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
